Add API report extension choice
- update openapi.yaml
- adapt view logic to return desired report type
