# validator/entrypoints/api/handlers.py
@@ -11,25 +11,29 @@ OpenAPI method handlers.
 import logging
 import tempfile
 from pathlib import Path
+from zipfile import ZipFile
 
 from flask import send_file
 from werkzeug.datastructures import FileStorage
-from werkzeug.exceptions import UnsupportedMediaType, InternalServerError
+from werkzeug.exceptions import UnsupportedMediaType, InternalServerError, UnprocessableEntity
 
-from validator.entrypoints.api.helpers import _guess_file_type, INPUT_MIME_TYPES
+from validator.entrypoints.api.helpers import _guess_file_type, INPUT_MIME_TYPES, REPORT_EXTENSIONS, \
+    DEFAULT_REPORT_EXTENSION, TTL_EXTENSION, HTML_EXTENSION, ZIP_EXTENSION, get_report_name
 from validator.service_layer.handlers import run_file_validator, run_sparql_endpoint_validator, \
     prepare_eds4jinja_context, generate_validation_report
 
 logger = logging.getLogger(__name__)
 
 
-def validate_file(data_file: FileStorage, schema_file: FileStorage) -> tuple:
+def validate_file(data_file: FileStorage, schema_file: FileStorage,
+                  report_extension: str = DEFAULT_REPORT_EXTENSION) -> tuple:
     """
     API method to handle file validation.
     :param data_file: The file to be validated
     :param schema_file: The content of the SHACL shape files defining the validation constraints
-    :return: the validation ttl file
-    :rtype: ttl file, int
+    :param report_extension: type of file to be returned. Can be `html`, `ttl`, or `zip`. Defaults to `ttl`
+    :return: the validation report in the requested format
+    :rtype: report file (html, ttl or zip format), int
     """
     file_exceptions = list()
     for file in [data_file.filename, schema_file.filename]:
@@ -39,6 +43,11 @@ def validate_file(data_file: FileStorage, schema_file: FileStorage) -> tuple:
         exception_text = 'File type errors: ' + ', '.join(file_exceptions) + '. Acceptable types: ' + \
                          ', '.join([f'{key}({value})' for (key, value) in INPUT_MIME_TYPES.items()]) + '.'
         raise UnsupportedMediaType(exception_text)
+
+    if report_extension not in REPORT_EXTENSIONS:
+        raise UnprocessableEntity(
+            'Wrong report_extension format. Accepted formats: '
+            f'{", ".join([format for format in REPORT_EXTENSIONS])}')
 
     try:
         with tempfile.TemporaryDirectory() as temp_folder:
@@ -52,10 +61,29 @@ def validate_file(data_file: FileStorage, schema_file: FileStorage) -> tuple:
                                                          schemas=[str(local_schema_file)],
                                                          output=str(Path(temp_folder)) + '/')
 
-            prepare_eds4jinja_context(temp_folder, ttl_report)
-            report_path = generate_validation_report(temp_folder)
+            if report_extension == TTL_EXTENSION:
+                report_path = ttl_report
+                report_filename = get_report_name(filename=data_file.filename, type=TTL_EXTENSION)
 
-            return send_file(report_path, as_attachment=True)  # 200
+            elif report_extension == HTML_EXTENSION:
+                prepare_eds4jinja_context(temp_folder, ttl_report)
+                report_path = generate_validation_report(temp_folder)
+                report_filename = get_report_name(filename=data_file.filename, type=ZIP_EXTENSION)
+
+            elif report_extension == ZIP_EXTENSION:
+                prepare_eds4jinja_context(temp_folder, ttl_report)
+                html_report = generate_validation_report(temp_folder)
+
+                ttl_filename = get_report_name(filename=data_file.filename, type=TTL_EXTENSION)
+                html_filename = get_report_name(filename=data_file.filename, type=HTML_EXTENSION)
+                report_filename = get_report_name(filename=data_file.filename, type=ZIP_EXTENSION)
+
+                report_path = str(Path(temp_folder) / 'report.zip')
+                with ZipFile(report_path, 'w') as zip_report:
+                    zip_report.write(html_report, arcname=html_filename)
+                    zip_report.write(ttl_report, arcname=ttl_filename)
+
+            return send_file(report_path, as_attachment=True, attachment_filename=report_filename)  # 200
     except Exception as e:
         logger.exception(e)
         raise InternalServerError(str(e))
